Restructure GameMode